tests/cases_invalid/expressions/.expected
error: undefined item
 --> ./cases_invalid/expressions/custom_operators.shd:2:28
  |
2 |     var not_found_binary = true + false;
  |                            ^^^^^^^^^^^^
  |                            |
  |                            `__add__(bool, bool)` function is undefined

error: undefined item
 --> ./cases_invalid/expressions/custom_operators.shd:3:27
  |
3 |     var not_found_unary = !1.0;
  |                           ^^^^
  |                           |
  |                           `__not__(f32)` function is undefined

error: undefined item
 --> ./cases_invalid/expressions/field.shd:3:13
  |
3 |     var z = vec.z;
  |             ^^^^^
  |             |
  |             `z` field of `i32x2` type is undefined

error: undefined item
  --> ./cases_invalid/expressions/fn_call.shd:10:5
   |
10 |     func(0, 0);
   |     ^^^^^^^^^^
   |     |
   |     `func(i32, i32)` function is undefined

error: undefined item
  --> ./cases_invalid/expressions/fn_call.shd:11:5
   |
11 |     func(0);
   |     ^^^^^^^
   |     |
   |     `func(i32)` function is undefined

error: undefined item
  --> ./cases_invalid/expressions/fn_call.shd:12:5
   |
12 |     other_func();
   |     ^^^^^^^^^^^^
   |     |
   |     `other_func()` function is undefined

error: undefined item
  --> ./cases_invalid/expressions/fn_call.shd:14:5
   |
14 |     0.func();
   |     ^^^^^^^^
   |     |
   |     `func(i32)` function is undefined

error: undefined item
  --> ./cases_invalid/expressions/fn_call.shd:15:17
   |
15 |     func2(func2(func2()));
   |                 ^^^^^^^
   |                 |
   |                 `func2()` function is undefined

error: undefined item
  --> ./cases_invalid/expressions/fn_call.shd:16:5
   |
16 |     0.func2().func2().func2(1).func2();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     `func2(i32, i32)` function is undefined

error: invalid expression type
 --> ./cases_invalid/expressions/no_return_type.shd:1:14
  |
1 | buf buffer = no_return();
  |              ^^^^^^^^^^^
  |              |
  |              this function does not return a value

error: invalid expression type
 --> ./cases_invalid/expressions/no_return_type.shd:4:13
  |
4 |     var a = no_return();
  |             ^^^^^^^^^^^
  |             |
  |             this function does not return a value

error: invalid expression type
 --> ./cases_invalid/expressions/no_return_type.shd:5:9
  |
5 |     a = no_return();
  |         ^^^^^^^^^^^
  |         |
  |         this function does not return a value

error: invalid expression type
 --> ./cases_invalid/expressions/no_return_type.shd:6:12
  |
6 |     return no_return();
  |            ^^^^^^^^^^^
  |            |
  |            this function does not return a value